--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="navbar bg-base-100">
+  <a class="btn btn-ghost normal-case text-xl">daisyUI</a>
+</div>
 <div class="hero min-h-screen bg-base-200">
   <div class="hero-content flex-col lg:flex-row">
     <img src="person.jpg" class="max-w-sm rounded-lg shadow-2xl" />
