--- a/index.html
+++ b/index.html
@@ -22,5 +22,10 @@
     </div>
   </div>
 </div>
+    <footer class="footer footer-center p-4 bg-base-300 text-base-content">
+  <aside>
+    <p>Copyright © 2023 - All right </p>
+  </aside>
+</footer>
 </body>
 </html>
